assets/css/gallery.css
.gallery__title {
    font-family: Inter, Arial, Helvetica, sans-serif;
    color: #1a1a1a;
    line-height: 1;
    font-weight: 700;
    font-size: 32px;
    margin: 0;
    margin-bottom: 24px;
}

@media (min-width: 768px) {
    .gallery {
        padding: 0; 
    }
    
    .gallery__title {
        font-size: 40px;
        margin-bottom: 40px;
    }
}

.gallery {
    font-family: Inter, Arial, Helvetica, sans-serif;
    color: #1a1a1a;
    line-height: 1;
    display: flex;
    justify-content: start;
    align-items: flex-start;
    flex-direction: column;
    padding: 0 20px;
}

.gallery__list {
    font-family: Inter, Arial, Helvetica, sans-serif;
    color: #1a1a1a;
    line-height: 1;
    list-style: none;
    display: contents;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    margin: 0;
    padding: 0;
}

.gallery__new-card-btn {
    font-family: Inter, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 24px;
    line-height: 1.2;
    color: #1a1a1a80;
    background-color: #d9d9d9;
    display: flex;
    justify-content: flex-start;
    align-items: start;
    width: 100%;
    height: auto;
    aspect-ratio: 325 / 205;
    padding: 20px;
    border-radius: 20px;
    border-style: none;
    box-sizing: border-box;
    cursor: pointer;
}

.gallery__new-card-btn--mobile {
    width: 290px;
    height: 56px;
    aspect-ratio: auto;
    justify-content: center;
    align-items: center;
    font-weight: 600;
    margin-bottom: 20px;
    background-color: #000000; 
    color: #ffffff;
    border-radius: 12px;
}

.gallery__new-card-btn:hover {
    background-color: #c5c5c5;
    color: #1a1a1a;
}

.gallery__wrapping-row {
    display: grid;
    grid-template-columns: 1fr; 
    width: 100%;
    gap: 20px;
}

@media (min-width: 768px) {
    .gallery__wrapping-row {
        grid-template-columns: repeat(4, 1fr); 
    }
}

.gallery__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin-bottom: 24px;
}

@media (min-width: 768px) {
    .gallery__header {
        margin-bottom: 40px; 
    }
}

.gallery__practice-btn {
    padding: 10px 20px;
    border-radius: 8px;
    border: 1px solid #d9d9d9;
    cursor: pointer;
    font-weight: 700;
}

